buscador mejorado ahora por GET

--- a/administrador/static/css/custom.styl
+++ b/administrador/static/css/custom.styl
@@ -56,6 +56,11 @@ p
 	padding-bottom 15px
 	border-bottom solid 1px darken(dwhite,10%)
 
+.put-border-bottom
+	border-bottom solid 1px darken(dwhite,10%)
+
+.put-border-top
+	border-top solid 1px darken(dwhite,10%)
 
 footer
 	.fstFooter
