--- a/administrador/templates/mueble.html
+++ b/administrador/templates/mueble.html
@@ -47,8 +47,7 @@
 			        <li><a href="/contacto/"><span class="icon-contact"></span>Contacto</a></li>
 			      </ul>
 
-			      <form class="navbar-form navbar-right" role="search" action="/busqueda/" method="POST">
-			      	{% csrf_token %}
+			      <form class="navbar-form navbar-right" role="search" action="/busqueda/" method="GET">
 		        	<div class="form-group">
 		          		{# <input type="text" class="form-control" placeholder="¿Qué estas buscando?"> #}
 		          		{{ searchform.pista.errors }}
@@ -168,6 +167,9 @@
 				<h4 class="cwhite setInline-Block">¿Te gustó? Luciría <strong>espectacular!</strong></h4>
 				<a href="/contacto/" class="btn btn-primary alinearBotonAsk typo18px">Ordena ahora</a>
 			</div>
+		</div>
+		<div class="jumbotron text-center">
+			<p>No te preocupes si no encuentras tu mueble ideal, <strong>trabajamos sobre pedido</strong>, lo tendrás justo como lo estas imaginando</p>
 		</div>
 	</section>
 	<footer>
