--- a/administrador/templates/catalogo-acabados.html
+++ b/administrador/templates/catalogo-acabados.html
@@ -99,8 +99,12 @@
 		</div>
 		<div class="container-fluid asking-block">
 			<div class="container">
-				<h4 class="cwhite setInline-Block">¿Te gustó? Luciría <strong>espectacular!</strong></h4>
-				<a href="/contacto/" class="btn btn-primary alinearBotonAsk typo18px">Ordena ahora</a>
+				<div class="row" id="asking-block-row">
+					<div class="col-12-xs">
+						<h4 class="cwhite setInline-Block">¿Te gustaron esto? Luciría <strong>espectacular!</strong></h4>
+						<a href="/contacto/" class="btn btn-primary alinearBotonAsk typo18px">Tomemos medidas ya mismo!</a>
+					</div>
+				</div>
 			</div>
 		</div>
 		<div class="jumbotron text-center">
@@ -121,6 +125,7 @@
 	<script src="http://maps.google.com/maps/api/js?sensor=false"></script>
 	<script src="{% static "js/bootstrap.min.js" %}"></script>
 	<script src="{% static "js/custom.js" %}"></script>
+	<script src="{% static "js/prefs.js" %}"></script>
 	<script>
 	  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
 	  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
