--- a/administrador/templates/index.html
+++ b/administrador/templates/index.html
@@ -142,8 +142,12 @@
 		</div>
 		<div class="container-fluid asking-block">
 			<div class="container">
-				<h4 class="cwhite setInline-Block">¿Te gustó? Luciría <strong>espectacular!</strong></h4>
-				<a href="/contacto/" class="btn btn-primary alinearBotonAsk typo18px">Ordena ahora</a>
+				<div class="row" id="asking-block-row">
+					<div class="col-12-xs">
+						<h4 class="cwhite setInline-Block">¿Te gustaron esto? Luciría <strong>espectacular!</strong></h4>
+						<a href="/contacto/" class="btn btn-primary alinearBotonAsk typo18px">Tomemos medidas ya mismo!</a>
+					</div>
+				</div>
 			</div>
 		</div>
 	</section>
@@ -158,9 +162,9 @@
 	
 	<!-- ===================JS============================ -->
 	<script src="{% static "js/jquery-2.1.1.min.js" %}"></script>
-	<script src="http://maps.google.com/maps/api/js?sensor=false"></script>
 	<script src="{% static "js/bootstrap.min.js" %}"></script>
 	<script src="{% static "js/custom.js" %}"></script>
+	<script src="{% static "js/prefs.js" %}"></script>
 	<script>
 	  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
 	  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
