recolectando preferencias del visitante basado en el tiempo que ve cada mueble

--- a/administrador/templates/catalogo-muebles.html
+++ b/administrador/templates/catalogo-muebles.html
@@ -96,7 +96,7 @@
 			<div class="container">
 				<div class="row" id="asking-block-row">
 					<div class="col-12-xs">
-						<h4 class="cwhite setInline-Block">¿Te gustaron esto? Luciría <strong>espectacular!</strong></h4>
+						<h4 class="cwhite setInline-Block">¿Te gusto? Luciría <strong>espectacular!</strong></h4>
 						<a href="/contacto/" class="btn btn-primary alinearBotonAsk typo18px">Tomemos medidas ya mismo!</a>
 					</div>
 				</div>
