--- a/administrador/templates/catalogo-muebles.html
+++ b/administrador/templates/catalogo-muebles.html
@@ -4,9 +4,10 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-	<meta charset="UTF-8">
-	<meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
 	<title>Carpinteria la fortaleza</title>
+	<meta charset="UTF-8">
+	<meta name="description" content="Catalogo de muebles - {{ categorias|safeseq|join:", " }}" />
+	<meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
 	<link href='http://fonts.googleapis.com/css?family=Open+Sans:400,300' rel='stylesheet' type='text/css'>
 	<link rel="stylesheet" href="{% static "css/bootstrap.css" %}">
 	<link rel="stylesheet" href="{% static "css/custom.css" %}">
