--- a/administrador/templates/index.html
+++ b/administrador/templates/index.html
@@ -82,7 +82,7 @@
 			    		<div class="item">
 			    	{% endif %}
 			    		{% thumbnail slider.imagen "1600x700" crop="center" as im %}
-			      			<img src="{{ im.url }}" alt="...">
+			      			<img src="{{ im.url }}" alt="{{ slider.titulo }}">
 			      		{% endthumbnail %}
 			      	</div>
 		      	{% endfor %}
