--- a/administrador/templates/mueble.html
+++ b/administrador/templates/mueble.html
@@ -87,7 +87,7 @@
 								{% thumbnail mueble.acabado.imagen "200x200" crop="center" as im %}
 								<div class="col-xs-6 col-sm-12">
 									<div class="thumbnail mainOrange modalbtn addBottomMediumMargin">
-								      <img src="{{ im.url }}" alt="...">
+								      <img src="{{ im.url }}" alt="{{mueble.acabado.titulo}}">
 								    </div>
 								    <p class="text-center mainOrange"><strong>acabado </strong>{{mueble.acabado.titulo}}</p>
 								</div>
@@ -95,7 +95,7 @@
 								{% thumbnail mueble.madera.imagen "200x200" crop="center" as im %}
 								<div class="col-xs-6 col-sm-12">
 									<div class="thumbnail mainOrange modalbtn addBottomMediumMargin">
-								      <img src="{{ im.url }}" alt="...">
+								      <img src="{{ im.url }}" alt="{{mueble.madera.titulo}}">
 								    </div>
 								    <p class="text-center mainOrange"><strong>madera </strong>{{mueble.madera.titulo}}</p>
 								</div>
@@ -107,7 +107,7 @@
 						{% thumbnail mueble.imagen1 "400x400" crop="center" as im %}
 						<div class="col-xs-6 col-md-3">
 							<a href="{{ mueble.id}}-2" class="thumbnail mainOrange modalbtn addBottomMediumMargin">
-						      <img src="{{ im.url }}" alt="...">
+						      <img src="{{ im.url }}" alt="{{ mueble.titulo }}">
 						    </a>
 						</div>
 						{% endthumbnail %}
@@ -115,7 +115,7 @@
 						{% thumbnail mueble.imagen2 "400x400" crop="center" as im %}
 						<div class="col-xs-6 col-md-3">
 							<a href="{{ mueble.id}}-3" class="thumbnail mainOrange modalbtn addBottomMediumMargin">
-						      <img src="{{ im.url }}" alt="...">
+						      <img src="{{ im.url }}" alt="{{ mueble.titulo }}">
 						    </a>
 						</div>
 						{% endthumbnail %}
@@ -123,14 +123,14 @@
 						{% thumbnail mueble.imagen3 "400x400" crop="center" as im %}
 						<div class="col-xs-6 col-md-3">
 							<a href="{{ mueble.id}}-4" class="thumbnail mainOrange modalbtn addBottomMediumMargin">
-						      <img src="{{ im.url }}" alt="...">
+						      <img src="{{ im.url }}" alt="{{ mueble.titulo }}">
 						    </a>
 						</div>
 						{% endthumbnail %}
 						{% thumbnail mueble.imagen4 "400x400" crop="center" as im %}
 						<div class="col-xs-6 col-md-3">
 							<a href="{{ mueble.id}}-5" class="thumbnail mainOrange modalbtn addBottomMediumMargin">
-						      <img src="{{ im.url }}" alt="...">
+						      <img src="{{ im.url }}" alt="{{ mueble.titulo }}">
 						    </a>
 						</div>
 						{% endthumbnail %}
@@ -153,7 +153,7 @@
 							{% thumbnail sugerencia.imagenPortada "400x400" crop="center" as im %}
 								<div class="col-xs-6 col-sm-4 col-md-6">
 									<a href="/mueble/{{sugerencia.categoria_id}}/{{sugerencia.id}}/" class="thumbnail mainOrange">
-								      <img src="{{ im.url }}" alt="...">
+								      <img src="{{ im.url }}" alt="{{sugerencia.titulo}}">
 								    </a>
 								    <p class="text-center mainOrange">{{sugerencia.titulo}}</p>
 								</div>
