--- a/administrador/templates/imgProducto.html
+++ b/administrador/templates/imgProducto.html
@@ -14,7 +14,7 @@
 
             <div class="thumbnail">
               {% thumbnail producto.imagen "850x600" as im %}
-                <img src="{{ im.url }}" alt="...">
+                <img src="{{ im.url }}" alt="{{ producto.titulo }}">
               {% endthumbnail %}
              </div>
           </div>
