--- a/administrador/templates/contacto.html
+++ b/administrador/templates/contacto.html
@@ -121,7 +121,7 @@
 			</div>
 		</div>
 	    <div class="jumbotron text-center put-border-top">
-			<p>No te preocupes si no encuentras tu mueble ideal, <strong>trabajamos sobre pedido</strong>, lo tendrás justo como lo estas imaginando</p>
+			<p>No te preocupes si no encuentras tu mueble ideal, <strong>trabajamos sobre pedido</strong>, lo tendrás justo como lo estas imaginando. Tambien podemos ayudarte con <strong>reparaciones</strong> de todo tipo de muebles.</p>
 		</div>
 	</section>
 	<footer>
