--- a/administrador/templates/catalogo-acabados.html
+++ b/administrador/templates/catalogo-acabados.html
@@ -109,7 +109,7 @@
 			</div>
 		</div>
 		<div class="jumbotron text-center">
-			<p>No te preocupes si no encuentras tu mueble ideal, <strong>trabajamos sobre pedido</strong>, lo tendrás justo como lo estas imaginando. Tambien podemos ayudarte con <strong>reparaciones</strong> de todo tipo de muebles.</p>
+			<p>No te preocupes si no encuentras tu mueble ideal, <strong>trabajamos sobre pedido</strong>, lo tendrás justo como lo estas imaginando. También podemos ayudarte con <strong>reparaciones</strong> de todo tipo de muebles.</p>
 		</div>
 	</section>
 	<footer>
