--- a/administrador/templates/index.html
+++ b/administrador/templates/index.html
@@ -138,7 +138,7 @@
 			</div>
 		</article>
 		<div class="jumbotron text-center">
-			<p>No te preocupes si no encuentras tu mueble ideal, <strong>trabajamos sobre pedido</strong>, lo tendrás justo como lo estas imaginando. Tambien podemos ayudarte con <strong>reparaciones</strong> de todo tipo de muebles.</p>
+			<p>No te preocupes si no encuentras tu mueble ideal, <strong>trabajamos sobre pedido</strong>, lo tendrás justo como lo estas imaginando. También podemos ayudarte con <strong>reparaciones</strong> de todo tipo de muebles.</p>
 		</div>
 		<div class="container-fluid asking-block">
 			<div class="container">
