--- a/administrador/templates/mueble.html
+++ b/administrador/templates/mueble.html
@@ -78,32 +78,6 @@
 						</div>
 						{% endthumbnail %}
 						
-						<div class="col-sm-10 descripcionMueble">
-							<p>{{ mueble.descripcion|linebreaks }}</p>
-						</div>
-
-						<div class="col-sm-2">
-							<div class="row">
-								{% thumbnail mueble.acabado.imagen "200x200" crop="center" as im %}
-								<div class="col-xs-6 col-sm-12">
-									<div class="thumbnail mainOrange modalbtn addBottomMediumMargin">
-								      <img src="{{ im.url }}" alt="{{mueble.acabado.titulo}}">
-								    </div>
-								    <p class="text-center mainOrange"><strong>acabado </strong>{{mueble.acabado.titulo}}</p>
-								</div>
-								{% endthumbnail %}
-								{% thumbnail mueble.madera.imagen "200x200" crop="center" as im %}
-								<div class="col-xs-6 col-sm-12">
-									<div class="thumbnail mainOrange modalbtn addBottomMediumMargin">
-								      <img src="{{ im.url }}" alt="{{mueble.madera.titulo}}">
-								    </div>
-								    <p class="text-center mainOrange"><strong>madera </strong>{{mueble.madera.titulo}}</p>
-								</div>
-								{% endthumbnail %}
-							</div>
-						</div>
-					</div>
-					<div class="row">
 						{% thumbnail mueble.imagen1 "400x400" crop="center" as im %}
 						<div class="col-xs-6 col-md-3">
 							<a href="{{ mueble.id}}-2" class="thumbnail mainOrange modalbtn addBottomMediumMargin">
@@ -134,9 +108,37 @@
 						    </a>
 						</div>
 						{% endthumbnail %}
-						
-						
+
+						<div class="col-sm-10 descripcionMueble">
+							<p>{{ mueble.descripcion|linebreaks }}</p>
+						</div>
+
+						<div class="col-sm-2">
+							<div class="row">
+								{% thumbnail mueble.acabado.imagen "200x200" crop="center" as im %}
+								<div class="col-xs-6 col-sm-12">
+									<div class="thumbnail mainOrange modalbtn addBottomMediumMargin">
+								      <img src="{{ im.url }}" alt="{{mueble.acabado.titulo}}">
+								    </div>
+								    <p class="text-center mainOrange"><strong>acabado </strong>{{mueble.acabado.titulo}}</p>
+								</div>
+								{% endthumbnail %}
+								{% thumbnail mueble.madera.imagen "200x200" crop="center" as im %}
+								<div class="col-xs-6 col-sm-12">
+									<div class="thumbnail mainOrange modalbtn addBottomMediumMargin">
+								      <img src="{{ im.url }}" alt="{{mueble.madera.titulo}}">
+								    </div>
+								    <p class="text-center mainOrange"><strong>madera </strong>{{mueble.madera.titulo}}</p>
+								</div>
+								{% endthumbnail %}
+							</div>
+						</div>
 					</div>
+					{# <div class="row">
+						
+						
+						
+					</div> #}
 					<!-- Button trigger modal -->
 					<div id="modal-cont"></div>
 				</div>
