--- a/administrador/static/css/custom.styl
+++ b/administrador/static/css/custom.styl
@@ -167,3 +167,10 @@ a.thumbnail.active
 .jumbotron
 	background dwhite
 	margin-bottom 0 
+
+@media (max-width: 768px)
+	.navbar-header
+		h1
+			margin 0 0 0 5px
+			display inline-block
+			font-size 28px
