--- a/administrador/templates/catalogo-muebles.html
+++ b/administrador/templates/catalogo-muebles.html
@@ -28,7 +28,7 @@
 			      </button>
 
 			      <a class="navbar-brand" href="/">
-			      	<img src="{% static "images/logo.png" %}" alt=""/>
+			      	<img src="{% static "images/logo.png" %}" alt="Logo carpinteria la fortaleza"/>
 			      	<h1>La fortaleza</h1>
 			      </a>
 			    </div>
