agregada seccion de clientes satisfechos

--- a/administrador/static/css/custom.styl
+++ b/administrador/static/css/custom.styl
@@ -168,6 +168,18 @@ a.thumbnail.active
 	background dwhite
 	margin-bottom 0 
 
+	&.with-border-bottom
+		border-bottom solid 1px #e1daca
+	
+	&.white-background
+		background white
+	
+	&.customers
+		p
+			font-size 14px
+		img
+			width 200px
+
 @media (max-width: 768px)
 	.navbar-header
 		h1
