--- a/administrador/templates/index.html
+++ b/administrador/templates/index.html
@@ -137,8 +137,34 @@
 		      	
 			</div>
 		</article>
-		<div class="jumbotron text-center">
+		<div class="jumbotron with-border-bottom text-center">
 			<p>No te preocupes si no encuentras tu mueble ideal, <strong>trabajamos sobre pedido</strong>, lo tendrás justo como lo estas imaginando. También podemos ayudarte con <strong>reparaciones</strong> de todo tipo de muebles.</p>
+		</div>
+		<div class="jumbotron white-background customers text-center">
+            <h3>Algunos de nuestros clientes satisfechos</h3>
+            <div class="row">
+                <div class="col-md-3">
+                    <img src="{% static "images/madeiras.jpg"%}" alt="">
+                    <p>Acapulco, Mexico | 1978</p>
+                </div>
+                <div class="col-md-3">
+                    <img src="{% static "images/maya.jpg"%}" alt="">
+                    <p>Francisco, EU | 1998</p>
+                    <p>New York, EU | 2000</p>
+                </div>
+                <div class="col-md-3">
+                    <img src="{% static "images/tamayo.jpg"%}" alt="">
+                    <p>New York, EU | 2000</p>
+                    <p>West Palm Beach, EUA | 2001</p>
+                </div>
+                <div class="col-md-3">
+                    <img src="{% static "images/mercadito.jpg"%}" alt="">
+                    <p>New York, EU | 2005</p>
+                    <p>(Grove) New York, EU | 2006</p>
+                    <p>Chicago, EU | 2008</p>
+                    <p>(Midtown) Miami, EU | 2009</p>
+                </div>
+            </div>
 		</div>
 		<div class="container-fluid asking-block">
 			<div class="container">
