background color changed for no jumbotron content

--- a/administrador/static/css/custom.styl
+++ b/administrador/static/css/custom.styl
@@ -55,7 +55,7 @@ p
 	border-bottom solid 5px norange
 
 .productosPrincipal
-	background nwhite
+	background white
 	padding-top 15px
 	padding-bottom 15px
 	border-bottom solid 1px darken(dwhite,10%)
@@ -169,14 +169,16 @@ a.thumbnail.active
 	margin-bottom 0 
 
 	&.with-border-bottom
-		border-bottom solid 1px #e1daca
+		border-bottom solid 1px #e1daca	
 	
-	&.white-background
-		background white
-	
+.white-background
+	background white
+
+.container
 	&.customers
+		padding 15px
 		h3
-			color lettergray
+			color norange
 		p
 			font-size 14px
 		img
